--- a/style.css
+++ b/style.css
@@ -15,10 +15,11 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
-	background: url("./assets/background.jpg");
+	background: url("./assets/background.png");
 	background-repeat: no-repeat;
   background-size: cover;
-	background-position: center center;
+	background-position: center;
+	background-attachment: fixed;
 	height: 100%;
 	width: 100%;
 }
@@ -65,6 +66,11 @@ footer {
 	height: 7vh;
 }
 
+.agenda {
+  text-decoration: none;
+  color: #eee;
+}
+
 h1 {
 	margin: 0;
 }
@@ -73,11 +79,18 @@ h2 {
 	margin: 0 0 10px 0;
 }
 
-footer a {
+img {
+	object-fit: cover;
+	height: 60vh;
+	width: 90vh;
+}
+
+.creditos {
 	text-decoration: none;
 	color: #eee;
 	font-size: 1vh;
 }
+
 nav ul {
 	list-style: none;
 	margin: 0;
